--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,92 @@
-pandas
-datamart_profiler==0.11
+aiohttp==3.8.4
+aiosignal==1.3.1
+appnope==0.1.3
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==23.1.0
+backcall==0.2.0
+blinker==1.6.2
+certifi==2023.5.7
+chardet==5.1.0
+charset-normalizer==3.2.0
+click==8.1.7
+comm==0.1.3
+contourpy==1.1.0
+cycler==0.11.0
+datamart-geo==0.3.1
+datamart-profiler==0.11
+debugpy==1.6.7
+decorator==5.1.1
+Deprecated==1.2.14
+executing==1.2.0
+filelock==3.12.2
+Flask==2.3.3
+fonttools==4.41.0
+frozenlist==1.4.0
+fsspec==2023.6.0
+huggingface-hub==0.16.4
+idna==3.4
+importlib-metadata==6.0.1
+importlib-resources==6.0.0
+ipykernel==6.24.0
+ipython==8.14.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.3.1
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+multidict==6.0.4
+nest-asyncio==1.5.6
+networkx==3.1
+numpy==1.25.0
 openai==0.27.8
+opentelemetry-api==1.18.0
+packaging==23.1
+pandas==2.0.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+platformdirs==3.8.1
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.15.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.1.0
+rank-bm25==0.2.2
+regex==2023.6.3
+requests==2.31.0
+safetensors==0.3.1
+scikit-learn==1.3.0
+scipy==1.11.1
+six==1.16.0
+stack-data==0.6.2
+sympy==1.12
+threadpoolctl==3.1.0
 tiktoken==0.4.0
-utils==1.0.1
+tokenizers==0.13.3
+torch==2.0.1
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.9.0
+transformers==4.31.0
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.3
+wcwidth==0.2.6
+Werkzeug==2.3.7
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.16.0
